crates/ty_server/tests/e2e/snapshots/e2e__folding_range__folding_range_imports.snap
---
source: crates/ty_server/tests/e2e/folding_range.rs
expression: ranges
---
[
  {
    "startLine": 4,
    "startCharacter": 0,
    "endLine": 5,
    "endCharacter": 8
  },
  {
    "startLine": 0,
    "startCharacter": 0,
    "endLine": 2,
    "endCharacter": 29,
    "kind": "imports"
  }
]
