crates/ty_server/tests/e2e/snapshots/e2e__folding_range__folding_range_multiline_collections.snap
---
source: crates/ty_server/tests/e2e/folding_range.rs
expression: ranges
---
[
  {
    "startLine": 0,
    "startCharacter": 10,
    "endLine": 4,
    "endCharacter": 1
  },
  {
    "startLine": 6,
    "startCharacter": 10,
    "endLine": 9,
    "endCharacter": 1
  }
]
