crates/ty_server/tests/e2e/snapshots/e2e__folding_range__folding_range_regions.snap
---
source: crates/ty_server/tests/e2e/folding_range.rs
expression: ranges
---
[
  {
    "startLine": 6,
    "startCharacter": 0,
    "endLine": 7,
    "endCharacter": 8
  },
  {
    "startLine": 1,
    "startCharacter": 0,
    "endLine": 2,
    "endCharacter": 10,
    "kind": "imports"
  },
  {
    "startLine": 0,
    "startCharacter": 0,
    "endLine": 3,
    "endCharacter": 11,
    "kind": "region"
  },
  {
    "startLine": 5,
    "startCharacter": 0,
    "endLine": 8,
    "endCharacter": 11,
    "kind": "region"
  }
]
