crates/ty_server/tests/e2e/snapshots/e2e__folding_range__folding_range_try_except.snap
---
source: crates/ty_server/tests/e2e/folding_range.rs
expression: ranges
---
[
  {
    "startLine": 0,
    "startCharacter": 0,
    "endLine": 7,
    "endCharacter": 13
  },
  {
    "startLine": 2,
    "startCharacter": 0,
    "endLine": 3,
    "endCharacter": 24
  },
  {
    "startLine": 4,
    "startCharacter": 0,
    "endLine": 5,
    "endCharacter": 23
  }
]
